fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,19 @@
   --color-primary: #007bff;
   --color-success: #28a745;
   --color-danger: orangered;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  min-height: 100vh;
 }
-
+#root{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  min-height: 100vh;
+}
 * {
   margin: 0;
   padding: 0;
@@ -29,10 +40,18 @@
 
 html {
   font-size: 10px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 body {
   font-family: var(--font-family);
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 section {
